crates/ir/tests/ir/snapshots/main__ir__lower__traits__trait_hierarchy_generic_functor.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__trait_hierarchy_generic_functor

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn double(v0: Dict[core/functor.Functor, r11], v1: r11[Int]) -> r11[Int] =
  let v5: (Int) -> Int = make_closure(lambda$32, [])
  let v6: r11[Int] = trait_call core/functor.Functor.map(v0, v1, v5)
  v6

fn main() -> Unit =
  let v7: Vec[Int] = make_vec(1, 2, 3, 4)
  let v9: Dict[core/functor.Functor, Vec] = get_dict core/functor.Functor[Vec]
  let v8: Vec[Int] = call double(v9, v7)
  let v13: (Int, Int) -> Int = make_closure(lambda$33, [])
  let v14: Dict[core/foldable.Foldable, Vec] = get_dict core/foldable.Foldable[Vec]
  let v15: Int = trait_call core/foldable.Foldable.fold(v14, v8, 0, v13)
  let v16: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v17: Unit = call println(v16, v15)
  let v19: List[Int] = construct List::Nil#1()
  let v20: List[Int] = construct List::Cons#0(3, v19)
  let v21: List[Int] = construct List::Cons#0(2, v20)
  let v18: List[Int] = construct List::Cons#0(1, v21)
  let v23: Dict[core/functor.Functor, List] = get_dict core/functor.Functor[List]
  let v22: List[Int] = call double(v23, v18)
  let v28: (Int, Int) -> Int = make_closure(lambda$34, [])
  let v29: Dict[core/foldable.Foldable, List] = get_dict core/foldable.Foldable[List]
  let v30: Int = trait_call core/foldable.Foldable.fold(v29, v22, 0, v28)
  let v24: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v31: Unit = call println(v24, v30)
  v31

fn lambda$32(v3: Int) -> Int =
  let v4: Int = mul_int(v3, 2)
  v4

fn lambda$33(v10: Int, v11: Int) -> Int =
  let v12: Int = add_int(v10, v11)
  v12

fn lambda$34(v25: Int, v26: Int) -> Int =
  let v27: Int = add_int(v25, v26)
  v27
