crates/ir/tests/ir/snapshots/main__ir__lower__traits__trait_hierarchy_monoid_empty.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__trait_hierarchy_monoid_empty

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Dict[core/monoid.Monoid, Int] = get_dict core/monoid.Monoid[Int]
  let v0: Int = trait_call core/monoid.Monoid.empty(v1)
  let v2: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v3: Unit = call println(v2, v0)
  let v5: Dict[core/monoid.Monoid, String] = get_dict core/monoid.Monoid[String]
  let v4: String = trait_call core/monoid.Monoid.empty(v5)
  let v6: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v7: Unit = call println(v6, v4)
  let v9: Dict[core/semigroup.Semigroup, List[Int]] = get_dict core/semigroup.Semigroup[List[Int]]
  let v10: Dict[core/monoid.Monoid, List[Int]] = make_dict core/monoid.Monoid[List[Int]](v9)
  let v8: List[Int] = trait_call core/monoid.Monoid.empty(v10)
  let v14: (Int, Int) -> Int = make_closure(lambda$31, [])
  let v15: Dict[core/foldable.Foldable, List] = get_dict core/foldable.Foldable[List]
  let v16: Int = trait_call core/foldable.Foldable.fold(v15, v8, 0, v14)
  let v17: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v18: Unit = call println(v17, v16)
  let v20: Dict[core/semigroup.Semigroup, List[Int]] = get_dict core/semigroup.Semigroup[List[Int]]
  let v21: Dict[core/monoid.Monoid, List[Int]] = make_dict core/monoid.Monoid[List[Int]](v20)
  let v22: List[Int] = trait_call core/monoid.Monoid.empty(v21)
  let v23: List[Int] = construct List::Nil#1()
  let v24: List[Int] = construct List::Cons#0(1, v23)
  let v25: Dict[core/semigroup.Semigroup, List[Int]] = get_dict core/semigroup.Semigroup[List[Int]]
  let v19: List[Int] = trait_call core/semigroup.Semigroup.combine(v25, v22, v24)
  let v30: (Int, Int) -> Int = make_closure(lambda$32, [])
  let v31: Dict[core/foldable.Foldable, List] = get_dict core/foldable.Foldable[List]
  let v32: Int = trait_call core/foldable.Foldable.fold(v31, v19, 0, v30)
  let v26: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v33: Unit = call println(v26, v32)
  v33

fn lambda$31(v11: Int, v12: Int) -> Int =
  let v13: Int = add_int(v11, v12)
  v13

fn lambda$32(v27: Int, v28: Int) -> Int =
  let v29: Int = add_int(v27, v28)
  v29
