crates/ir/tests/ir/snapshots/main__ir__lower__traits__trait_hierarchy_superclass.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__trait_hierarchy_superclass

type Box[x10] = Box#0(x10)
instance core/functor.Functor[Box] { map=Functor$$Box$$map }
instance core/applicative.Applicative[Box] { pure=Applicative$$Box$$pure, apply=Applicative$$Box$$apply }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Dict[core/applicative.Applicative, Box] = get_dict core/applicative.Applicative[Box]
  let v0: Box[Int] = trait_call core/applicative.Applicative.pure(v1, 5)
  let v5: (Int) -> Int = make_closure(lambda$35, [])
  let v2: Box[(Int) -> Int] = construct Box::Box#0(v5)
  let v6: Dict[core/applicative.Applicative, Box] = get_dict core/applicative.Applicative[Box]
  let v7: Box[Int] = trait_call core/applicative.Applicative.apply(v6, v2, v0)
  switch v7 {
    0 (v8: Int) ->
      let v9: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v10: Unit = call println(v9, v8)
      v10
  }

fn Functor$$Box$$map(v11: Box[k12], v12: (k12) -> m12) -> Box[m12] =
  switch v11 {
    0 (v13: k12) ->
      let v14: m12 = call_closure v12(v13)
      let v15: Box[m12] = construct Box::Box#0(v14)
      v15
  }

fn Applicative$$Box$$pure(v16: o12) -> Box[o12] =
  let v17: Box[o12] = construct Box::Box#0(v16)
  v17

fn Applicative$$Box$$apply(v18: Box[(a13) -> c13], v19: Box[a13]) -> Box[c13] =
  switch v18 {
    0 (v20: (a13) -> c13) ->
      switch v19 {
        0 (v21: a13) ->
          let v22: c13 = call_closure v20(v21)
          let v23: Box[c13] = construct Box::Box#0(v22)
          v23
      }
  }

fn lambda$35(v3: Int) -> Int =
  let v4: Int = add_int(v3, 3)
  v4
