crates/ir/tests/ir/snapshots/main__ir__lower__traits__trait_hierarchy_traverse_without_applicative_import.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__trait_hierarchy_traverse_without_applicative_import

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Option[Int] = construct Option::Some#0(7)
  let_join v51(v25: Unit) =
    let v27: Int = neg_int(1)
    let v26: Option[Int] = construct Option::Some#0(v27)
    let v35: (Int) -> Option[Int] = make_closure(lambda$32, [])
    let v36: Dict[core/traversable.Traversable, Option] = get_dict core/traversable.Traversable[Option]
    let v37: Dict[core/applicative.Applicative, Option] = get_dict core/applicative.Applicative[Option]
    let v38: Option[Option[Int]] = trait_call core/traversable.Traversable.traverse(v36, v37, v26, v35)
    switch v38 {
      0 (v39: f) ->
        switch v39 {
          0 (v40: Int) ->
            let v42: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
            let v43: String = trait_call core/show.Show.show(v42, v40)
            let v44: Dict[core/semigroup.Semigroup, String] = get_dict core/semigroup.Semigroup[String]
            let v45: String = trait_call core/semigroup.Semigroup.combine(v44, "SomeVal:", v43)
            let v41: Dict[core/show.Show, String] = get_dict core/show.Show[String]
            let v46: Unit = call println(v41, v45)
            v46
          1 ->
            let v47: Dict[core/show.Show, String] = get_dict core/show.Show[String]
            let v48: Unit = call println(v47, "SomeNone")
            v48
        }
      1 ->
        let v49: Dict[core/show.Show, String] = get_dict core/show.Show[String]
        let v50: Unit = call println(v49, "None")
        v50
    }
  in
  let v9: (Int) -> Option[Int] = make_closure(lambda$31, [])
  let v10: Dict[core/traversable.Traversable, Option] = get_dict core/traversable.Traversable[Option]
  let v11: Dict[core/applicative.Applicative, Option] = get_dict core/applicative.Applicative[Option]
  let v12: Option[Option[Int]] = trait_call core/traversable.Traversable.traverse(v10, v11, v0, v9)
  switch v12 {
    0 (v13: f) ->
      switch v13 {
        0 (v14: Int) ->
          let v16: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
          let v17: String = trait_call core/show.Show.show(v16, v14)
          let v18: Dict[core/semigroup.Semigroup, String] = get_dict core/semigroup.Semigroup[String]
          let v19: String = trait_call core/semigroup.Semigroup.combine(v18, "Some:", v17)
          let v15: Dict[core/show.Show, String] = get_dict core/show.Show[String]
          let v20: Unit = call println(v15, v19)
          jump v51(v20)
        1 ->
          let v21: Dict[core/show.Show, String] = get_dict core/show.Show[String]
          let v22: Unit = call println(v21, "SomeNone")
          jump v51(v22)
      }
    1 ->
      let v23: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v24: Unit = call println(v23, "None")
      jump v51(v24)
  }

fn lambda$31(v1: Int) -> Option[Int] =
  let_join v8(v4: Bool) =
    if v4 {
      let v5: Int = add_int(v1, 1)
      let v6: Option[Int] = construct Option::Some#0(v5)
      v6
    } else {
      let v7: Option[Int] = construct Option::None#1()
      v7
    }
  in
  let v2: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
  let v3: Bool = trait_call core/ord.Ord.lt(v2, 0, v1)
  jump v8(v3)

fn lambda$32(v28: Int) -> Option[Int] =
  let_join v34(v31: Bool) =
    if v31 {
      let v32: Option[Int] = construct Option::Some#0(v28)
      v32
    } else {
      let v33: Option[Int] = construct Option::None#1()
      v33
    }
  in
  let v29: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
  let v30: Bool = trait_call core/ord.Ord.lt(v29, 0, v28)
  jump v34(v30)
