crates/ir/tests/ir/snapshots/main__ir__lower__traits__trait_method_shadows_prelude.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__trait_method_shadows_prelude

trait Multiply[b11] { times(b11, b11): b11 }
instance traits__trait_method_shadows_prelude.Multiply[Int] { times=Multiply$$Int$$times }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Dict[traits__trait_method_shadows_prelude.Multiply, Int] = get_dict traits__trait_method_shadows_prelude.Multiply[Int]
  let v1: Int = trait_call traits__trait_method_shadows_prelude.Multiply.times(v0, 2, 3)
  let v2: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v3: String = trait_call core/show.Show.show(v2, v1)
  let v4: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v5: Unit = call println(v4, v3)
  let v7: Int = add_int(1, 2)
  let v8: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v9: String = trait_call core/show.Show.show(v8, v7)
  let v6: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v10: Unit = call println(v6, v9)
  v10

fn Multiply$$Int$$times(v11: Int, v12: Int) -> Int =
  let v13: Int = mul_int(v11, v12)
  v13
