crates/ir/tests/ir/snapshots/main__ir__lower__traits__trait_sort_ints.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__trait_sort_ints

trait Cmp[l12] { compare(l12, l12): Int }
instance traits__trait_sort_ints.Cmp[Int] { compare=Cmp$$Int$$compare }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Dict[traits__trait_sort_ints.Cmp, Int] = get_dict traits__trait_sort_ints.Cmp[Int]
  let v2: Int = trait_call traits__trait_sort_ints.Cmp.compare(v1, 1, 2)
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v3: Unit = call println(v0, v2)
  v3

fn Cmp$$Int$$compare(v4: Int, v5: Int) -> Int =
  let_join v14(v8: Bool) =
    if v8 {
      let v9: Int = sub_int(0, 1)
      v9
    } else {
      let_join v13(v12: Bool) =
        if v12 {
          1
        } else {
          0
        }
      in
      let v10: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
      let v11: Bool = trait_call core/ord.Ord.lt(v10, v5, v4)
      jump v13(v11)
    }
  in
  let v6: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
  let v7: Bool = trait_call core/ord.Ord.lt(v6, v4, v5)
  jump v14(v7)
