crates/ir/tests/ir/snapshots/main__ir__lower__traits__trait_zero_arg.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__trait_zero_arg

type MyStruct = MyStruct#0(Int)
trait Default[l12] { default(): l12 }
instance traits__trait_zero_arg.Default[Int] { default=Default$$Int$$default }
instance traits__trait_zero_arg.Default[MyStruct] { default=Default$$MyStruct$$default }
instance core/show.Show[MyStruct] { show=Show$$MyStruct$$show }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Dict[traits__trait_zero_arg.Default, Int] = get_dict traits__trait_zero_arg.Default[Int]
  let v1: Int = trait_call traits__trait_zero_arg.Default.default(v0)
  let v2: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v3: Unit = call println(v2, v1)
  let v5: Dict[traits__trait_zero_arg.Default, MyStruct] = get_dict traits__trait_zero_arg.Default[MyStruct]
  let v6: MyStruct = trait_call traits__trait_zero_arg.Default.default(v5)
  let v4: Dict[core/show.Show, MyStruct] = get_dict core/show.Show[MyStruct]
  let v7: Unit = call println(v4, v6)
  v7

fn Default$$Int$$default() -> Int =
  42

fn Default$$MyStruct$$default() -> MyStruct =
  let v8: MyStruct = construct MyStruct::MyStruct#0(10)
  v8

fn Show$$MyStruct$$show(v9: MyStruct) -> String =
  switch v9 {
    0 (v10: Int) ->
      let v11: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v12: String = trait_call core/show.Show.show(v11, v10)
      let v13: String = concat_string("MyStruct(", v12)
      let v14: String = concat_string(v13, ")")
      v14
  }
