crates/ir/tests/ir/snapshots/main__ir__lower__traits__trait_zero_arg_constrained_vec.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__trait_zero_arg_constrained_vec

trait Test[y10] { name(): String }
instance traits__trait_zero_arg_constrained_vec.Test[Vec$$Var0] { name=Test$$Vec$$Var0$$name }
instance traits__trait_zero_arg_constrained_vec.Test[Int] { name=Test$$Int$$name }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Dict[traits__trait_zero_arg_constrained_vec.Test, Int] = get_dict traits__trait_zero_arg_constrained_vec.Test[Int]
  let v2: Dict[traits__trait_zero_arg_constrained_vec.Test, Vec[Int]] = make_dict traits__trait_zero_arg_constrained_vec.Test[Vec[Int]](v1)
  let v3: String = trait_call traits__trait_zero_arg_constrained_vec.Test.name(v2)
  let v0: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v4: Unit = call println(v0, v3)
  v4

fn Test$$Vec$$Var0$$name(v5: Dict[traits__trait_zero_arg_constrained_vec.Test, z10]) -> String =
  let v6: String = trait_call traits__trait_zero_arg_constrained_vec.Test.name(v5)
  v6

fn Test$$Int$$name() -> String =
  "yo"
